modules/gdscript/tests/scripts/parser/errors/reserved_keyword_namespace.gd
extends Node

func ready():
    namespace example
